# lunk

./: .gitignore  .gitlab-ci.yml  Cargo.toml  README.md  dev
.github/workflows/: ci.yml  release.yml
assets/native-messaging/: com.grymoire.app.json.template  com.lunk.app.json.template
crates/grymoire-app/: Cargo.toml  build.rs  tauri.conf.json
crates/grymoire-app/capabilities/: default.json
crates/grymoire-app/src/: chat_commands.rs  commands.rs  lib.rs  llm_commands.rs  main.rs
crates/grymoire-cli/: Cargo.toml
crates/grymoire-cli/src/: cli.rs  main.rs  native_messaging.rs
crates/grymoire-core/: Cargo.toml
crates/grymoire-core/src/: change_tracking.rs  chunks.rs  config.rs  db.rs  embeddings.rs  errors.rs  keywords.rs  lib.rs  llm_catalog.rs  llm_engine.rs  llm_models.rs  llm_titles.rs  models.rs  repo.rs  schema.rs  search.rs  sync.rs  titles.rs  topics.rs  transport.rs
crates/grymoire-core/src/pdf/: dehyphenate.rs  document.rs  encodings_data.rs  mod.rs  parser.rs  text.rs  words.txt  xref.rs
crates/grymoire-server/: Cargo.toml
crates/grymoire-server/src/: auth.rs  handlers.rs  lib.rs  state.rs
crates/lunk-app/: Cargo.toml  tauri.conf.json
crates/lunk-app/capabilities/: default.json
crates/lunk-app/src/: chat_commands.rs  commands.rs  lib.rs  llm_commands.rs  main.rs
crates/lunk-cli/: Cargo.toml
crates/lunk-cli/src/: cli.rs  main.rs  native_messaging.rs
crates/lunk-core/: Cargo.toml
crates/lunk-core/src/: chunks.rs  config.rs  db.rs  embeddings.rs  errors.rs  hlc.rs  keywords.rs  lib.rs  llm_engine.rs  llm_models.rs  llm_titles.rs  models.rs  pdf.rs  rag.rs  repo.rs  schema.rs  search.rs  sync.rs  titles.rs  topics.rs  transport.rs
crates/lunk-core/src/pdf/: cmap.rs  document.rs  encoding.rs  glyphlist.rs  mod.rs  parser.rs  stream.rs  text.rs
crates/lunk-server/: Cargo.toml
crates/lunk-server/src/: handlers.rs  lib.rs  state.rs
docs/: semantic-architecture.md
extension/: background.js  content.js  manifest.json  package.json  popup.html  popup.js  rollup.config.js
extension/lib/: single-file-frames.js  single-file-hooks-frames.js
frontend/: index.html  package.json  vite.config.ts
frontend/src/: App.svelte  api.ts  app.css  main.ts
frontend/src/lib/: ChatView.svelte  EntryGrid.svelte  EntryList.svelte  EntryView.svelte  FilterBar.svelte  FilterChip.svelte  HomeView.svelte  ModelCard.svelte  NavRail.svelte  PdfView.svelte  SearchBar.svelte  SettingsPanel.svelte  Sidebar.svelte  SyncPanel.svelte  WelcomeFlow.svelte
scripts/: build-dev.sh  install.ps1  install.sh
