[package]
name = "grymoire-core"
version.workspace = true
edition.workspace = true

[dependencies]
rusqlite = { version = "0.35", features = ["bundled", "blob"] }
uuid = { version = "1", features = ["v7", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
tracing = "0.1"
url = { version = "2", features = ["serde"] }
reqwest = { version = "0.12", features = ["rustls-tls"] }
scraper = "0.22"
directories = "6"
flate2 = "1"
weezl = "0.1"
base64 = "0.22"
toml = "0.8"
tokio = { version = "1", features = ["full"] }
iroh = "0.97"
hex = "0.4"
rand = "0.9"
futures-lite = "2"
anyhow = "1"
fastembed = "4"
yake-rust = "1"
hdbscan = "0.12"
llama-cpp-2 = "0.1"
sha2 = "0.10"
encoding_rs = "0.8"
