[package]
name = "grymoire-server"
version.workspace = true
edition.workspace = true

[dependencies]
grymoire-core = { path = "../grymoire-core" }
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
uuid = { version = "1", features = ["v7"] }
url = "2"
base64 = "0.22"

[dev-dependencies]
http-body-util = "0.1"
hyper = "1"
