[package]
name = "lunk-app"
version.workspace = true
edition.workspace = true

[dependencies]
lunk-core = { path = "../lunk-core" }
lunk-server = { path = "../lunk-server" }
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
base64 = "0.22"
uuid = { version = "1", features = ["v7"] }
axum = "0.8"

[build-dependencies]
tauri-build = { version = "2", features = [] }
ureq = "2"

[lib]
name = "lunk_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
