[package]
name = "lunk-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "lunk"
path = "src/main.rs"

[dependencies]
lunk-core = { path = "../lunk-core" }
lunk-server = { path = "../lunk-server" }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
byteorder = "1"
rusqlite = { version = "0.35", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
base64 = "0.22"
uuid = { version = "1", features = ["v7"] }
url = "2"
reqwest = { version = "0.12", features = ["rustls-tls"] }
scraper = "0.22"
axum = "0.8"
