[package]
name = "lunk-core"
version.workspace = true
edition.workspace = true

[dependencies]
rusqlite = { version = "0.35", features = ["bundled", "load_extension", "blob"] }
uuid = { version = "1", features = ["v7", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
tracing = "0.1"
url = { version = "2", features = ["serde"] }
reqwest = { version = "0.12", features = ["rustls-tls"] }
scraper = "0.22"
directories = "6"
base64 = "0.22"
toml = "0.8"
tokio = { version = "1", features = ["full"] }
iroh = "0.96"
hex = "0.4"
rand = "0.9"
futures-lite = "2"
anyhow = "1"
